--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   google_fonts: ^4.0.3
+  flutter_screenutil: ^5.6.1
+  loading_animation_widget: ^1.2.0+4
 
 dev_dependencies:
   flutter_test:
