--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_screenutil: ^5.6.1
   loading_animation_widget: ^1.2.0+4
   intro_screen_onboarding_flutter: ^1.0.0
+  concentric_transition: ^1.0.3
   
 
 dev_dependencies:
