--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   icons_plus: ^3.0.0
   dio: ^4.0.6
   shared_preferences: ^2.0.17
+  sms_autofill: ^2.2.0
+  provider: ^6.0.5
   
 
 dev_dependencies:
