--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   sms_autofill: ^2.2.0
   provider: ^6.0.5
   animated_icon_button: ^1.0.2
+  flutter_snake_navigationbar: ^0.6.1
+  proste_indexed_stack: ^0.2.4
   
   
 
