--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,8 @@ dependencies:
   animated_icon_button: ^1.0.2
   flutter_snake_navigationbar: ^0.6.1
   proste_indexed_stack: ^0.2.4
+  animated_button: ^0.2.0
+  switcher_button: ^0.0.4
   
   
 
