--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   proste_indexed_stack: ^0.2.4
   day_night_switcher: ^0.2.0+1
   firebase_messaging: ^14.2.2
+  firebase_core: ^2.4.1
  
   
  
