--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,10 @@ dependencies:
   day_night_switcher: ^0.2.0+1
   firebase_messaging: ^14.2.2
   firebase_core: ^2.4.1
+  cached_network_image: ^3.2.3
+  image_picker: ^0.8.6+1
+  image_cropper: ^3.0.1
+  intl: ^0.17.0
  
   
  
