--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   intl: ^0.17.0
   flutter_svg: ^1.1.6
   intl_phone_number_input: ^0.7.2
+  country_state_city_picker: ^1.2.8
  
   
  
