--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
   flutter_svg: ^1.1.6
   intl_phone_number_input: ^0.7.2
   csc_picker: ^0.2.7
+  flutter_advanced_drawer: ^1.3.3
   
  
  
