--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,11 +60,17 @@ dependencies:
   intl_phone_number_input: ^0.7.2
   csc_picker: ^0.2.7
   flutter_advanced_drawer: ^1.3.3
+  flutter_launcher_icons: ^0.11.0
   
  
  
   
- 
+flutter_icons:
+  android: 
+    enable: true
+  ios: 
+    enable: true
+  image_path: 'assets/images/logo.png' 
   
   
 
